# xlog_flutter

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml  sync_headers.py
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/xlog_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: xlog_flutter.podspec
ios/Classes/: xlog_flutter.c
lib/: xlog_flutter.dart  xlog_flutter_bindings_generated.dart
linux/: CMakeLists.txt
macos/: xlog_flutter.podspec
macos/Classes/: xlog_flutter.c
src/: CMakeLists.txt  xlog_flutter.c  xlog_flutter.cpp  xlog_flutter.h
windows/: .gitignore  CMakeLists.txt
windows/libs/x64/: zstd_static.lib
windows/libs/x64/Release/: xlog.lib
windows/libs/x64/debug/: zstd_static.lib
